/**
 * æƒé™ç®¡ç† API æ¨¡å—
 * ä½¿ç”¨æ ‡å‡† HTTP/REST APIï¼Œä½†ä¿æŒ proto ç±»å‹å®šä¹‰
 */

import { get, post, put, del } from '../axios'
import type { Permission, Role, CreatePermissionRequest, UpdatePermissionRequest, CreateRoleRequest, UpdateRoleRequest, CheckPermissionRequest, CheckPermissionResponse } from '@/shared/rbac'

// ========================================
// ğŸ”’ æƒé™ç®¡ç†ç›¸å…³ç±»å‹ï¼ˆåŸºäº proto å®šä¹‰ï¼‰
// ========================================

// ä½¿ç”¨ proto ç”Ÿæˆçš„ç±»å‹ï¼Œå»é™¤æ–¹æ³•
export type PermissionInfo = Permission
export type RoleInfo = Role

export type CreatePermissionParams = Omit<CreatePermissionRequest, 'toJSON' | 'fromJSON' | 'create' | 'decode' | 'encode' | 'fromPartial'>
export type UpdatePermissionParams = Omit<UpdatePermissionRequest, 'toJSON' | 'fromJSON' | 'create' | 'decode' | 'encode' | 'fromPartial'>
export type CreateRoleParams = Omit<CreateRoleRequest, 'toJSON' | 'fromJSON' | 'create' | 'decode' | 'encode' | 'fromPartial'>
export type UpdateRoleParams = Omit<UpdateRoleRequest, 'toJSON' | 'fromJSON' | 'create' | 'decode' | 'encode' | 'fromPartial'>
export type CheckPermissionParams = Omit<CheckPermissionRequest, 'toJSON' | 'fromJSON' | 'create' | 'decode' | 'encode' | 'fromPartial'>

// æ‰©å±•çš„æŸ¥è¯¢å‚æ•°ç±»å‹
export interface GetPermissionsParams {
  page?: number
  pageSize?: number
  keyword?: string
  resource?: string
  action?: string
}

export interface GetRolesParams {
  page?: number
  pageSize?: number
  keyword?: string
  includePermissions?: boolean
}

export interface PermissionListResponse {
  permissions: PermissionInfo[]
  total: number
  page: number
  pageSize: number
}

export interface RoleListResponse {
  roles: RoleInfo[]
  total: number
  page: number
  pageSize: number
}

// ========================================
// ğŸ”’ æƒé™ç®¡ç† API
// ========================================

/**
 * è·å–æƒé™åˆ—è¡¨
 */
export const getPermissions = async (params?: GetPermissionsParams) => {
  return get<void, PermissionListResponse>('/api/permissions', { params })
}

/**
 * æ ¹æ®IDè·å–æƒé™è¯¦æƒ…
 */
export const getPermissionById = async (id: string) => {
  return get<void, PermissionInfo>(`/api/permissions/${id}`)
}

/**
 * åˆ›å»ºæƒé™
 */
export const createPermission = async (params: CreatePermissionParams) => {
  return post<CreatePermissionParams, PermissionInfo>('/api/permissions', { data: params })
}

/**
 * æ›´æ–°æƒé™
 */
export const updatePermission = async (params: UpdatePermissionParams) => {
  const { id, ...updateData } = params
  return put<Omit<UpdatePermissionParams, 'id'>, PermissionInfo>(`/api/permissions/${id}`, { data: updateData })
}

/**
 * åˆ é™¤æƒé™
 */
export const deletePermission = async (id: string) => {
  return del<void, void>(`/api/permissions/${id}`)
}

/**
 * æ‰¹é‡åˆ é™¤æƒé™
 */
export const batchDeletePermissions = async (ids: string[]) => {
  return post<{ ids: string[] }, void>('/api/permissions/batch-delete', { data: { ids } })
}

// ========================================
// ğŸ‘¥ è§’è‰²ç®¡ç† API
// ========================================

/**
 * è·å–è§’è‰²åˆ—è¡¨
 */
export const getRoles = async (params?: GetRolesParams) => {
  return get<void, RoleListResponse>('/api/roles', { params })
}

/**
 * æ ¹æ®IDè·å–è§’è‰²è¯¦æƒ…
 */
export const getRoleById = async (id: string) => {
  return get<void, RoleInfo>(`/api/roles/${id}`)
}

/**
 * åˆ›å»ºè§’è‰²
 */
export const createRole = async (params: CreateRoleParams) => {
  return post<CreateRoleParams, RoleInfo>('/api/roles', { data: params })
}

/**
 * æ›´æ–°è§’è‰²
 */
export const updateRole = async (params: UpdateRoleParams) => {
  const { id, ...updateData } = params
  return put<Omit<UpdateRoleParams, 'id'>, RoleInfo>(`/api/roles/${id}`, { data: updateData })
}

/**
 * åˆ é™¤è§’è‰²
 */
export const deleteRole = async (id: string) => {
  return del<void, void>(`/api/roles/${id}`)
}

/**
 * æ‰¹é‡åˆ é™¤è§’è‰²
 */
export const batchDeleteRoles = async (ids: string[]) => {
  return post<{ ids: string[] }, void>('/api/roles/batch-delete', { data: { ids } })
}

/**
 * ä¸ºè§’è‰²åˆ†é…æƒé™
 */
export const assignRolePermissions = async (roleId: string, permissionIds: string[]) => {
  return post<{ permissionIds: string[] }, RoleInfo>(`/api/roles/${roleId}/permissions`, { data: { permissionIds } })
}

/**
 * ç§»é™¤è§’è‰²æƒé™
 */
export const removeRolePermissions = async (roleId: string, permissionIds: string[]) => {
  return del<{ permissionIds: string[] }, RoleInfo>(`/api/roles/${roleId}/permissions`, { data: { permissionIds } })
}

/**
 * è·å–è§’è‰²çš„æƒé™åˆ—è¡¨
 */
export const getRolePermissions = async (roleId: string) => {
  return get<void, PermissionInfo[]>(`/api/roles/${roleId}/permissions`)
}

// ========================================
// ğŸ” æƒé™æ£€æŸ¥ API
// ========================================

/**
 * æ£€æŸ¥å½“å‰ç”¨æˆ·æ˜¯å¦æœ‰æŒ‡å®šæƒé™
 */
export const checkPermission = async (params: CheckPermissionParams) => {
  return post<CheckPermissionParams, CheckPermissionResponse>('/api/auth/check-permission', { data: params })
}

/**
 * æ‰¹é‡æ£€æŸ¥æƒé™
 */
export const batchCheckPermissions = async (permissions: CheckPermissionParams[]) => {
  return post<{ permissions: CheckPermissionParams[] }, CheckPermissionResponse[]>('/api/auth/batch-check-permissions', { data: { permissions } })
}

/**
 * è·å–å½“å‰ç”¨æˆ·çš„æ‰€æœ‰æƒé™
 */
export const getCurrentUserPermissions = async () => {
  return get<void, PermissionInfo[]>('/api/auth/permissions')
}

/**
 * è·å–å½“å‰ç”¨æˆ·çš„æ‰€æœ‰è§’è‰²
 */
export const getCurrentUserRoles = async () => {
  return get<void, RoleInfo[]>('/api/auth/roles')
}

// ========================================
// ğŸ“Š æƒé™ç»Ÿè®¡ API
// ========================================

/**
 * è·å–æƒé™ç»Ÿè®¡ä¿¡æ¯
 */
export const getPermissionStats = async () => {
  return get<
    void,
    {
      totalPermissions: number
      totalRoles: number
      activeRoles: number
      permissionsByResource: Record<string, number>
    }
  >('/api/permissions/stats')
}

/**
 * è·å–è§’è‰²ç»Ÿè®¡ä¿¡æ¯
 */
export const getRoleStats = async () => {
  return get<
    void,
    {
      totalRoles: number
      rolesWithUsers: number
      averagePermissionsPerRole: number
      topRolesByUserCount: Array<{ roleId: string; roleName: string; userCount: number }>
    }
  >('/api/roles/stats')
}
